--- a/docker-compose/redis-sentinel/sentinel2.conf
+++ b/docker-compose/redis-sentinel/sentinel2.conf
@@ -9,3 +9,4 @@ sentinel down-after-milliseconds mymaster 5000
 sentinel parallel-syncs mymaster 1
 # 故障转移超时时间
 sentinel failover-timeout mymaster 5000
+sentinel auth-pass mymaster 123456
